fix: permitir todos los origins para CORS en desarrollo